fix evaluate answers bug